[gd_scene load_steps=9 format=2]

[ext_resource path="res://Hero/Boomerang_small.png" type="Texture" id=1]
[ext_resource path="res://Hero/Boomerang.gd" type="Script" id=2]
[ext_resource path="res://Hero/Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hero/Trail_Width_Curve.tres" type="Curve" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.5

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Boomerang" type="KinematicBody2D"]
scale = Vector2( 5, 5 )
collision_layer = 8
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=["Hero_Hitbox", "Projectile_Hitbox"]]
visible = false
collision_layer = 8
collision_mask = 11

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Search_Area" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="Search_Area"]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( -2.5, -0.5 )
texture = ExtResource( 1 )
centered = false

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 0, 3 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -2, -1 )

[node name="Trail" parent="." instance=ExtResource( 3 )]
width = 2.0
width_curve = ExtResource( 4 )
default_color = Color( 0.0627451, 0.890196, 0.890196, 1 )
gradient = SubResource( 5 )
texture_mode = 1
target_path = NodePath("..")
length = 30

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Spin = SubResource( 4 )

[node name="Flying_Time" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Search_Area" to="." method="_on_Search_Area_body_entered"]
[connection signal="timeout" from="Flying_Time" to="." method="_on_Flying_Time_timeout"]
